kubernetes/spring-micro-business-remoting-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-micro-business-remoting
  labels:
    app: business-remoting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: business-remoting-app
  template:
    metadata:
      labels:
        app: business-remoting-app
    spec:
      containers:
      - name: spring-micro-business-remoting
        image: pintu12345/spring-micro-business-remoting:v3
        ports:
        - containerPort: 8000
