kubernetes/elastic-service .yaml
apiVersion: v1
kind: Service
metadata:
  name: elastic-service
  labels:
    app: elastic-app
spec:
  selector:
    app: elastic-app
  type: NodePort
  ports:
  - nodePort: 31001
    port: 8080
    targetPort: 8080
    protocol: TCP
