kubernetes/site-crawler-service .yaml
apiVersion: v1
kind: Service
metadata:
  name: site-crawler-service
  labels:
    app: site-crawler-app
spec:
  selector:
    app: site-crawler-app
  type: NodePort
  ports:
  - nodePort: 31002
    port: 8100
    targetPort: 8100
    protocol: TCP
